app/assets/stylesheets/components/_common.scss
.fw-500{
  font-weight: 500 !important;
}
.w500{
  width: 450px;
}
/*fonts size*/
.fs-8{font-size:8px}
.fs-9{font-size:9px}
.fs-10{font-size:10px}
.fs-11{font-size:11px}
.fs-12{font-size:12px}
.fs-13{font-size:13px}
.fs-14{font-size:14px}
.fs-15{font-size:15px}
.fs-16{font-size:16px !important}
.fs-17{font-size:17px}
.fs-18{font-size:18px}
.fs-19{font-size:19px}
.fs-20{font-size:20px}
.fs-21{font-size:21px}
.fs-22{font-size:22px}
.fs-23{font-size:23px !important}
.fs-24{font-size:24px}
.fs-25{font-size:25px}
.fs-26{font-size:26px}
.fs-27{font-size:27px}
.fs-28{font-size:28px}
.fs-29{font-size:29px}
.fs-30{font-size:30px}
.fs-34{font-size:34px}
.fs-35{font-size:35px}
.fs-36{font-size:36px}
.fs-40{font-size:40px}
.fs-42{font-size:42px}
.fs-45{font-size:45px}
.fs-50{font-size:50px}
.fs-60{font-size:60px}

/*line-height*/
.lh-1{line-height: 1;}
.lh-8{line-height:8px}
.lh-9{line-height:9px}
.lh-10{line-height:10px}
.lh-11{line-height:11px}
.lh-12{line-height:12px}
.lh-13{line-height:13px}
.lh-14{line-height:14px}
.lh-15{line-height:15px}
.lh-16{line-height:16px}
.lh-17{line-height:17px}
.lh-18{line-height:18px}
.lh-19{line-height:19px}
.lh-20{line-height:20px}
.lh-21{line-height:21px}
.lh-22{line-height:22px}
.lh-23{line-height:23px}
.lh-24{line-height:24px}
.lh-25{line-height:25px}
.lh-26{line-height:26px}
.lh-27{line-height:27px}
.lh-28{line-height:28px}
.lh-29{line-height:29px}
.lh-30{line-height:30px}
.lh-35{line-height:35px}
.lh-40{line-height:40px}
.lh-45{line-height:45px}
.lh-50{line-height:50px}
.lh-60{line-height:60px}
.lh-32{line-height:32px}
.lh-33{line-height:33px}
.lh-34{line-height:34px}
.lh-35{line-height:35px}
.lh-36{line-height:36px}
.lh-37{line-height:37px}
.lh-38{line-height:38px}
.lh-34{line-height:34px}
.lh-n{line-height:normal}
.lh-0{line-height:0px}

.header-phone-img{
  width: 283px;
  max-width: 100%;
}
.form-page{
  min-height: 100vh;
}
.modal2 {
  display: none;
  position: fixed;
  z-index: 1;
  padding-top: 40px;
  padding-bottom: 40px;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgb(0,0,0);
  background-color: rgba(0,0,0,0.4);
}
.modal2-content {
  background-color: #fefefe;
  margin: auto;
  padding: 20px;
  border: 1px solid #888;
  width: 85%;
  border-radius: 5px;
}
.close-b{
  color: #aaaaaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
}
.close-b:hover,
.close-b:focus {
  color: #000;
  text-decoration: none;
  cursor: pointer;
}

.display-n{
  display: none;
}
.bg-img-success{
  background-image: image-url('bg-img.jpg');
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  height: 100vh;
}
.fs-185{
  font-size: 185px;
}
.min-h{
  min-height: 190px;
}
.left-0r{
  border-bottom-left-radius: 0px !important;
  border-top-left-radius: 0px !important;
}
.findAddress-btn{
  position: absolute;
  bottom: 0px;
  right: 9px;
}

.bt-orng2{
  background-color: #fa900d !important;
}
.bt-orng2:hover{
  background-color: #ffa940 !important;
}
.maxw-100{
  max-width: 100% !important;
}
.btn-hot{
  background: linear-gradient(to right,#f55a00, #ff9b00, #f55a00) !important;
  border-radius: 50px !important;
  margin-bottom: -18px;
  padding: 6px 61px !important;
  font-size: 20px !important;
  color: white !important;
  font-weight: 700 !important;
}
.border-orng{
  border: 1px solid #fa900d;
}
.text-org{
  color: #ffa940 !important;
}
.img-box{
  width: 145px;
  height: 226px;
}
.img-box1{
  width: 174px;
  height: 226px;
}
.bg-light-orng{
  background-color: #fa900d !important;
}
.text-blue1{
  color: #16589d;
}
.company-top-btn{
  width: 25px;
}
.company-top-btn2{
  width: 50px;
}
/*radio btn */

.input-deposit{
  font-size: 23px !important;
  font-weight: 800px;
  background-color: white;
  width: 100%;
  border: 1px solid transparent;
  display: flex;
  justify-content: center;
}
.input-deposit:hover{
  border: 1px solid #344eb0;
}
.input-deposit:after{
  width: 32px;
  height: 32px;
  content: "";
  border: 2px solid #e7e7ee;
  background-color: #e7e7ee;
  border-radius: 50%;
  z-index: 2;
  position: absolute;
  left: 6%;
  top: 29px;
  -webkit-transform: translateY(-50%);
  transform: translateY(-50%);
  cursor: pointer;
}
input:checked ~ .input-deposit:after{
  background-color: #fff;
  border-color: #fff;
  background-image: url('radiodott.png');
  background-repeat: no-repeat;
  background-position: 7px 7px;
  -webkit-transition: all .2s ease-in-out;
  transition: all .2s ease-in-out
}
input:checked ~ .input-deposit{
  color: white !important;
  background: #3ebbe9;
  border: 1px solid #3ebbe9 !important;
}
.input-deposit-radio{
  width: 80%;
  left: 21px;
  height: 55px;
}
input:hover ~ .input-deposit{
  border: 1px solid #3ebbe9;
  color: white !important;
  background: #3ebbe9;
}
input:hover ~ .input-deposit:after{
  border: 4px solid white;
  background: #3ebbe9;
}

/*radio btn end*/
.mh-phone{
  max-height: 210px !important;
}

.input-deals{
  font-size: 23px !important;
  font-weight: 800px;
  background-color: white;
  width: 100%;
  border: 1px solid transparent;
  display: flex;
  justify-content: center;
  color: #ff8c00;
}
.input-deals:hover{
  border: 1px solid #344eb0;
}
.input-deals:after{
  width: 32px;
  height: 32px;
  content: "";
  border: 2px solid #e7e7ee;
  background-color: #e7e7ee;
  border-radius: 50%;
  z-index: 2;
  position: absolute;
  left: 6%;
  top: 50%;
  -webkit-transform: translateY(-50%);
  transform: translateY(-50%);
  cursor: pointer;
}
input:checked ~ .input-deals:after{
  background-color: #fff;
  border-color: #fff;
  background-image: url('radiodott.png');
  background-repeat: no-repeat;
  background-position: 7px 7px;
  -webkit-transition: all .2s ease-in-out;
  transition: all .2s ease-in-out
}
input:checked ~ .input-deals{
  color: white !important;
  background: #3ebbe9;
  border: 1px solid #3ebbe9 !important;
}
.input-deals-radio{
  width: 80%;
  left: 21px;
  height: 55px;
}
/* ... */

